welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:2: error: '(' expected but identifier found.
  if n>=21 {
     ^diff21:7: error: illegal start of simple expression
} 
^